force-app/main/default/src/objects/HealthCloudGA__RiskScoreAgeBandContinuedEnrollee__mdt/HealthCloudGA__RiskScoreAgeBandContinuedEnrollee__mdt.object-meta.xml
<CustomObject>
    <description>Lookup table for continued enrollees with scores for Age bands</description>
    <label>Risk Score Age Band Continued Enrollee</label>
    <pluralLabel>Risk Score Age Band Continued Enrollees</pluralLabel>
</CustomObject>