force-app/main/default/src/objects/HealthCloudGA__RiskScoreAgeBandContinuedEnrollee__mdt/fields/HealthCloudGA__AgeBandTo__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__AgeBandTo__c</fullName>
    <label>Age Band To</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>