force-app/main/default/src/objects/HealthCloudGA__RiskScoreAgeBandContinuedEnrollee__mdt/fields/HealthCloudGA__CommunityNonDualAged__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CommunityNonDualAged__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Community NonDual Aged</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>